--- a/public/css/flatsome-extended-public.css
+++ b/public/css/flatsome-extended-public.css
@@ -1,6 +1,148 @@
-/**
- * All of the CSS for your public-facing functionality should be
- * included in this file.
- */
 
 
+
+
+
+
+
+
+
+
+
+/* ninja form fixes */
+.field-wrap input[type=submit] {
+    height: auto !important;
+}
+.nf-form-fields-required {
+    display: none;
+}
+
+spannf-form-title-1 {
+    display: none;
+}
+
+
+/* /css for before after */
+
+        .before-after-main *,
+        .before-after-main *::after,
+        .before-after-main *::before {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+       .before-after-main img {
+            display: block;
+            max-width: 100%;
+        }
+
+        .before-after-main {
+            display: grid;
+            place-items: center;
+            
+            /*   min-height: 40vh; */
+
+        }
+
+        .before-after-container {
+            display: grid;
+            place-content: center;
+            position: relative;
+            overflow: hidden;
+            border-radius: 1rem;
+            --position: 50%;
+        }
+
+        .before-after-container .image-container {
+            max-width: 100%;
+             aspect-ratio: 1 / 1;
+            width: auto;
+            /*  height: 100%; */
+        }
+
+        .before-after-container .slider-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: left;
+        }
+
+        .before-after-container .image-before {
+            position: absolute;
+            inset: 0;
+            width: var(--position);
+          /*   filter: grayscale(100%) */
+        }
+
+        .before-after-container .slider-inp {
+            position: absolute;
+            inset: 0;
+            cursor: pointer;
+            opacity: 0;
+            /* for Firefox */
+            width: 100%;
+            height: 100%;
+        }
+
+        .slider-inp:focus-visible~.slider-button {
+            outline: 5px solid black;
+            outline-offset: 3px;
+        }
+
+        .before-after-container .slider-line {
+            position: absolute;
+            inset: 0;
+            width: .2rem;
+            height: 100%;
+            background-color: #fff;
+            /* z-index: 10; */
+            left: var(--position);
+            transform: translateX(-50%);
+            pointer-events: none;
+        }
+
+        .before-after-container .slider-button {
+            position: absolute;
+            background-color: #fff;
+            color: black;
+            padding: .5rem;
+            border-radius: 100vw;
+            display: grid;
+            place-items: center;
+            top: 50%;
+            left: var(--position);
+            transform: translate(-50%, -50%);
+            pointer-events: none;
+            /* z-index: 100; */
+            box-shadow: 1px 1px 1px hsl(0, 50%, 2%, .5);
+        }
+
+
+/*         slider-text */
+.before-after-container .img-sli {
+    display: block;
+    position: absolute;
+    width: 100%;
+    z-index: 99;
+    text-align: center;
+    bottom: 2%;
+}
+
+ .before-after-container .img-sli-texts {
+    display: flex;
+    justify-content: space-between;
+    color: #ddd;
+    text-transform: uppercase;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+    border-radius: 4px;
+}
+
+.before-after-container .img-sli-texts span {
+    background: #00000066;
+    font-size: .8em;
+    padding: 1px 8px;
+}
+   
